style(core): reduce PMD violations