@@ -122,10 +122,12 @@ public class CsvValidateCommand extends ConsumerCommand {
   public void consume(final InputStream inputStream) throws IOException {
     Objects.requireNonNull(inputStream, "InputStream cannot be null");
 
-    LOGGER.info(
-        "Starting CSV validation - hasHeader: {}, requiredColumns: {}",
-        hasHeader,
-        requiredColumns.size());
+    if (LOGGER.isInfoEnabled()) {
+      LOGGER.info(
+          "Starting CSV validation - hasHeader: {}, requiredColumns: {}",
+          hasHeader,
+          requiredColumns.size());
+    }
 
     List<String> validationErrors = new ArrayList<>();
 
@@ -165,15 +167,21 @@ public class CsvValidateCommand extends ConsumerCommand {
         handleValidationErrors(validationErrors);
       }
 
-      LOGGER.info("CSV validation completed successfully");
+      if (LOGGER.isInfoEnabled()) {
+        LOGGER.info("CSV validation completed successfully");
+      }
 
     } catch (CsvValidationException e) {
-      LOGGER.error("CSV parsing error: {}", e.getMessage(), e);
+      if (LOGGER.isErrorEnabled()) {
+        LOGGER.error("CSV parsing error: {}", e.getMessage(), e);
+      }
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
     } catch (StreamProcessingException e) {
       throw e;
     } catch (Exception e) {
-      LOGGER.error("CSV validation failed: {}", e.getMessage(), e);
+      if (LOGGER.isErrorEnabled()) {
+        LOGGER.error("CSV validation failed: {}", e.getMessage(), e);
+      }
       throw new StreamProcessingException("Failed to parse CSV: " + e.getMessage(), e);
     }
   }
@@ -190,7 +198,7 @@ public class CsvValidateCommand extends ConsumerCommand {
     Set<String> duplicates = new HashSet<>();
 
     for (String header : headers) {
-      if (header == null || header.trim().isEmpty()) {
+      if (header == null || header.isBlank()) {
         errors.add("Header contains empty or null column");
         continue;
       }
@@ -247,7 +255,7 @@ public class CsvValidateCommand extends ConsumerCommand {
     // 空行チェック
     boolean isEmptyRow = true;
     for (String cell : row) {
-      if (cell != null && !cell.trim().isEmpty()) {
+      if (cell != null && !cell.isBlank()) {
         isEmptyRow = false;
         break;
       }
@@ -274,18 +282,24 @@ public class CsvValidateCommand extends ConsumerCommand {
 
     for (int i = 0; i < errors.size(); i++) {
       errorBuilder.append("\n  ").append(i + 1).append(". ").append(errors.get(i));
-      LOGGER.error("CSV validation error {}: {}", i + 1, errors.get(i));
+      if (LOGGER.isErrorEnabled()) {
+        LOGGER.error("CSV validation error {}: {}", i + 1, errors.get(i));
+      }
     }
 
     String errorMessage = errorBuilder.toString();
-    LOGGER.error("CSV validation summary: {}", errorMessage);
+    if (LOGGER.isErrorEnabled()) {
+      LOGGER.error("CSV validation summary: {}", errorMessage);
+    }
 
     // エラーメッセージが長すぎる場合は切り詰める（可読性向上のため）
     String finalErrorMessage = errorMessage;
     if (errorMessage.length() > 1000) {
       finalErrorMessage = errorMessage.substring(0, 997) + "...";
-      LOGGER.warn(
-          "Error message truncated due to length (original: {} chars)", errorMessage.length());
+      if (LOGGER.isWarnEnabled()) {
+        LOGGER.warn(
+            "Error message truncated due to length (original: {} chars)", errorMessage.length());
+      }
     }
 
     throw new StreamProcessingException("CSV validation failed: " + finalErrorMessage);
