@@ -28,8 +28,6 @@ import org.xml.sax.SAXException;
  */
 public class ValidateCommand extends ConsumerCommand {
   private static final Logger logger = LoggerFactory.getLogger(ValidateCommand.class);
-  private static final Logger securityLogger =
-      LoggerFactory.getLogger("com.streamConverter.security");
 
   private final String schemaPath;
   private final Schema schema;
@@ -46,6 +44,7 @@ public class ValidateCommand extends ConsumerCommand {
    * @throws StreamProcessingException スキーマファイルの読み込みに失敗した場合
    */
   private ValidateCommand(String schemaPath, Schema schema) {
+    super();
     this.schemaPath = schemaPath;
     this.schema = schema;
   }
@@ -61,7 +60,7 @@ public class ValidateCommand extends ConsumerCommand {
    */
   public static ValidateCommand create(String schemaPath) {
     Objects.requireNonNull(schemaPath, "Schema path cannot be null");
-    if (schemaPath.trim().isEmpty()) {
+    if (schemaPath.isBlank()) {
       throw new IllegalArgumentException("Schema path cannot be empty");
     }
     String normalizedPath = normalizeClasspathPath(schemaPath);
@@ -102,14 +101,22 @@ public class ValidateCommand extends ConsumerCommand {
       URL schemaUrl = ClasspathResourceValidator.getResourceUrl(validatedPath);
 
       Schema loadedSchema = factory.newSchema(schemaUrl);
-      logger.info("XML Schema loaded successfully from: {}", validatedPath);
-      securityLogger.info("Secure XML schema loading completed for: {}", validatedPath);
+      if (logger.isInfoEnabled()) {
+        logger.info("XML Schema loaded successfully from: {}", validatedPath);
+      }
+      if (logger.isInfoEnabled()) {
+        logger.info("Secure XML schema loading completed for: {}", validatedPath);
+      }
 
       return loadedSchema;
 
     } catch (SAXException | IllegalArgumentException e) {
-      logger.error("Failed to load XML schema from {}: {}", validatedPath, e.getMessage(), e);
-      securityLogger.error("Secure XML schema loading failed for: {}", validatedPath);
+      if (logger.isErrorEnabled()) {
+        logger.error("Failed to load XML schema from {}: {}", validatedPath, e.getMessage(), e);
+      }
+      if (logger.isErrorEnabled()) {
+        logger.error("Secure XML schema loading failed for: {}", validatedPath);
+      }
       throw new StreamProcessingException(
           String.format("XMLスキーマの読み込みに失敗しました - スキーマ: %s, エラー: %s", validatedPath, e.getMessage()),
           e);
@@ -139,11 +146,15 @@ public class ValidateCommand extends ConsumerCommand {
       // XMLバリデーションの実行
       validator.validate(new StreamSource(inputStream));
 
-      logger.info("XML validation completed successfully using schema: {}", schemaPath);
+      if (logger.isInfoEnabled()) {
+        logger.info("XML validation completed successfully using schema: {}", schemaPath);
+      }
 
     } catch (SAXException e) {
       // バリデーションエラーの詳細ログ出力
-      logger.error("XMLバリデーションエラーが発生しました: {}", e.getMessage(), e);
+      if (logger.isErrorEnabled()) {
+        logger.error("XMLバリデーションエラーが発生しました: {}", e.getMessage(), e);
+      }
 
       // バリデーションエラーをカスタム例外でラップして伝播
       throw new StreamProcessingException(
@@ -165,6 +176,8 @@ public class ValidateCommand extends ConsumerCommand {
     validator.setProperty(XMLConstants.ACCESS_EXTERNAL_DTD, "");
     validator.setProperty(XMLConstants.ACCESS_EXTERNAL_SCHEMA, "");
 
-    logger.debug("Secure XML processing features configured for Validator");
+    if (logger.isDebugEnabled()) {
+      logger.debug("Secure XML processing features configured for Validator");
+    }
   }
 }
